--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,20 @@
 		font-weight: bold;
 	}
 }
+.barChart{
+	margin: 3px;
+  height: 100%;
+  width:100%;
+  background-color: lightblue;
+  }
+.subject {
+	text-size-adjust: left;
+	font-size: 1.3em;
+	padding: 12px;
+}
+.passedCountBar{
+	background: #ffd100;
+	font-size: 1.5em;
+	height:2vw;
+}
+
